--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,3 +1,6 @@
+@import 'variables';
+@import 'fonts';
+
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
   filter: invert(1);
@@ -25,8 +28,8 @@ html { height: 100%; }
 
 body {
   color: black;
-  font-family: monospace;
-  font-size: 16px;
+  font-family: $font-family-main;
+  font-size: 18px;
   line-height: 1.4;
   margin: 0;
   min-height: 100%;
