Update post and styling

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -72,6 +72,9 @@ table, th, td {
 
 code {
   color: black;
+  font-family: monospace;
+  font-size: 14px;
+
   background: rgb(242, 242, 242);
 }
 
