--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -15,7 +15,12 @@
     {%- for post in posts limit: include.limit -%}
         <li>
           <span>{{- post.date | date: site.theme_config.date_format -}}</span>
-          <a href="{{ post.url | relative_url }}">{{ post.title | capitalize_all }}</a>
+          <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+          {% if post.draft %}
+          <span class="draft-label">
+            DRAFT
+          </span>
+          {% endif %}
         </li>
     {%- endfor -%}
     {%- if include.show_more and limit_exceeded -%}
