--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,11 +10,15 @@ layout: default
   </p>
 
 
-<!--  <div class="header" style="height: 20px">-->
-<!--    <h1>{{ page.title }}</h1>-->
-<!--  </div>-->
+  {% if page.draft %}
+  <div class="draft-notice">
+    <span class="draft-label">DRAFT</span>
+  </div>
+  {% endif %}
 
   <h1>{{ page.title }}</h1>
+
+
 
 
   {{ content }}
