--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -13,6 +13,7 @@
 {%- if posts.size > 0 -%}
   <ul>
     {%- for post in posts limit: include.limit -%}
+    {%- if post.category != "til" -%}
         <li>
           <span>{{- post.date | date: site.theme_config.date_format -}}</span>
           <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
@@ -22,6 +23,7 @@
           </span>
           {% endif %}
         </li>
+    {%- endif -%}
     {%- endfor -%}
     {%- if include.show_more and limit_exceeded -%}
       <li><a href="{{ include.show_more_url }}">{{ include.show_more_text | default: "Show more..." }}</a></li>
