--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -38,7 +38,7 @@ body {
 
 .post-meta { text-align: right; }
 
-h2, h3, h4, h5, h6 { margin-top: 3rem; }
+h2, h3, h4, h5, h6 { margin-top: 0; margin-bottom: 0; }
 
 hr { margin: 2rem 0; }
 
