--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <body a="{{ site.theme_config.appearance | default: "auto" }}">
     <main class="page-content" aria-label="Content">
       <div class="w">
-        {{ content }}
+        {{ content | replace: '<table>', '<div class="table-wrapper" markdown="block"><table>' | replace: '</table>', '</table></div>' }}
       </div>
     </main>
 
